增加可以手动设置ROI区域位置及大小功能

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,5 +1,7 @@
 <!DOCTYPE RCC><RCC version="1.0">
 	<qresource>
 	<file>res/assemble.png</file>
+	<file>res/close.png</file>
+	<file>res/open.png</file>
 	</qresource>
 </RCC>
