仓储系统界面

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 	<qresource>
-	<file>res/assemble.png</file>
+	<file>res/storage.png</file>
 	<file>res/close.png</file>
 	<file>res/open.png</file>
 	</qresource>
